--- a/app/src/main/res/layout/info.xml
+++ b/app/src/main/res/layout/info.xml
@@ -55,14 +55,13 @@
 
     <ImageButton
 
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
         android:id="@+id/back"
         android:background="@drawable/home"
-        android:layout_below="@+id/wordpress"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+
+        android:layout_alignParentBottom="true" />
 
     <ImageButton
         android:layout_width="wrap_content"
